--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "dpollard/craftcms-laravelmixhelper",
     "description": "A helper to handle laravel mix",
     "type": "craft-plugin",
-    "version": "1.0.2",
     "keywords": [
         "craft",
         "cms",
@@ -23,7 +22,8 @@
     ],
     "require": {
         "craftcms/cms": "^3.0.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "symfony/polyfill-php80": "^1.22"
     },
     "require-dev": {
       "craftcms/cms": "^3.2.0",
